--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Project specific ignores
+logs
+
+### The remainder of this file is GitHub's Python template
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
